Contributing an initial notebook with methods for running and processing simulations

--- a/notebooks/Fluvial-particle-demo.ipynb
+++ b/notebooks/Fluvial-particle-demo.ipynb
@@ -11,6 +11,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "collapsed": true,
     "tags": []
    },
    "outputs": [
@@ -2247,7 +2248,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
