some changes to FM_GridFill.ipynb

--- a/notebooks/FM_GridFill.ipynb
+++ b/notebooks/FM_GridFill.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "c1eba5ff-9fc8-496b-8442-48f927b9dafd",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "75a48354-e9d4-455f-a7f6-339f7237dec9",
    "metadata": {},
    "outputs": [],
@@ -35,17 +35,24 @@
     "# # filename of new 3d solution\n",
     "# new3dsol = '../data/NoStrmLnCurv_185cms3d1_new.vtk'\n",
     "\n",
+    "# # filenames of existing 2d and 3d solutions\n",
+    "# filename2d = '../data/simple_meander/Result_FM_MEander_1_long_2D1.vtk'\n",
+    "# filename3d = '../data/simple_meander/Result_FM_MEander_1_long_3D1.vtk'\n",
+    "\n",
+    "# # filename of new 3d solution\n",
+    "# new3dsol = '../data/simple_meander/Result_FM_MEander_1_long_3D1_new.vtk'\n",
+    "\n",
     "# filenames of existing 2d and 3d solutions\n",
-    "filename2d = '../data/simple_meander/Result_FM_MEander_1_long_2D1.vtk'\n",
-    "filename3d = '../data/simple_meander/Result_FM_MEander_1_long_3D1.vtk'\n",
+    "filename2d = '../data/IPC//NoStrmLnCurv_185cms2d1.vtk'\n",
+    "filename3d = '../data/IPC/NoStrmLnCurv_185cms3d1.vtk'\n",
     "\n",
     "# filename of new 3d solution\n",
-    "new3dsol = '../data/simple_meander/Result_FM_MEander_1_long_3D1_new.vtk'"
+    "new3dsol = '../data/IPC/NoStrmLnCurv_185cms3d1_new.vtk'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "b08a71d4-f9c1-4b0a-be88-f3f9920638f8",
    "metadata": {},
    "outputs": [],
@@ -68,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "c0e093bd-2e0c-46c1-b333-edbb70be6471",
    "metadata": {},
    "outputs": [
@@ -76,7 +83,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(601, 11, 1) (601, 11, 8)\n"
+      "(5356, 101, 1) (5356, 101, 15)\n"
      ]
     }
    ],
@@ -89,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "e56e58de-99d0-4b1a-ac1d-04dd4cc87cc8",
    "metadata": {},
    "outputs": [
@@ -109,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "875f7430-8382-4894-b986-de8739e13df9",
    "metadata": {},
    "outputs": [],
@@ -121,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "7ba21ebb-5083-4987-9100-287591cebcb9",
    "metadata": {},
    "outputs": [
@@ -129,10 +136,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Velocity\n",
       "SVelocity\n",
       "NVelocity\n",
       "IBC\n",
-      "Velocity\n",
       "Velocity (magnitude)\n"
      ]
     }
@@ -145,17 +152,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "a3221a08-879c-4706-b9bf-69df2208d22e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "52888"
+       "8114340"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "a93d2b6a-d91a-4570-8522-46f0b8d1552e",
    "metadata": {},
    "outputs": [
@@ -176,7 +183,7 @@
        "1"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "778a6b7b-aa2e-44dd-ac96-984e703af35f",
    "metadata": {
     "tags": []
@@ -214,7 +221,7 @@
        "1"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
