--- a/notebooks/api-demo.ipynb
+++ b/notebooks/api-demo.ipynb
@@ -34,6 +34,7 @@
     "xstart, ystart, zstart = (6.14, 9.09, 10.3)\n",
     "lev = 0.00025\n",
     "\n",
+    "# Pre-compute simulation times\n",
     "times = np.arange(dt, endtime + dt, dt)\n",
     "n_times = times.size"
    ]
