fixes to api-demo notebook

--- a/notebooks/api-demo.ipynb
+++ b/notebooks/api-demo.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fluvial_particle import RiverGrid\n",
-    "from fluvial_particle import Particles\n",
+    "from fluvial_particle.RiverGrid import RiverGrid\n",
+    "from fluvial_particle.Particles import Particles\n",
     "import h5py\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -36,7 +36,14 @@
     "\n",
     "# Pre-compute simulation times\n",
     "times = np.arange(dt, endtime + dt, dt)\n",
-    "n_times = times.size"
+    "n_times = times.size\n",
+    "print_inc = np.max([np.int32(PrintAtTick / dt), 1])  # bound below\n",
+    "print_inc = np.min([print_inc, n_times])  # bound above\n",
+    "print_times = times[print_inc - 1 : n_times : print_inc]\n",
+    "if print_times[-1] != times[-1]:\n",
+    "    # add final time to print_times if not already\n",
+    "    print_times = np.append(print_times, times[-1])\n",
+    "n_prints = print_times.size + 1  # plus one so we can write t=0 to file"
    ]
   },
   {
@@ -81,7 +88,7 @@
    "source": [
     "# Create output particles HDF5 file\n",
     "fname = output_directory + \"//particles.h5\"\n",
-    "parts_h5 = particles.create_hdf5(n_times+1, nparticles, fname=fname)\n",
+    "parts_h5 = particles.create_hdf5(n_prints, nparticles, fname=fname)\n",
     "particles.write_hdf5(parts_h5, 0, 0, nparticles, 0.0, 0)  # write initial condition"
    ]
   },
@@ -94,36 +101,152 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed simulation time: 0.25 seconds\n",
-      "Elapsed simulation time: 50.25 seconds\n",
-      "Elapsed simulation time: 100.25 seconds\n",
-      "Elapsed simulation time: 150.25 seconds\n",
-      "Elapsed simulation time: 200.25 seconds\n",
-      "Elapsed simulation time: 250.25 seconds\n",
-      "Elapsed simulation time: 300.25 seconds\n",
-      "Elapsed simulation time: 350.25 seconds\n",
-      "Elapsed simulation time: 400.25 seconds\n",
-      "Elapsed simulation time: 450.25 seconds\n",
-      "Elapsed simulation time: 500.25 seconds\n",
-      "Elapsed simulation time: 550.25 seconds\n",
-      "Elapsed simulation time: 600.25 seconds\n",
-      "Elapsed simulation time: 650.25 seconds\n",
-      "Elapsed simulation time: 700.25 seconds\n",
-      "Elapsed simulation time: 750.25 seconds\n",
-      "Elapsed simulation time: 800.25 seconds\n",
-      "Elapsed simulation time: 850.25 seconds\n",
-      "Elapsed simulation time: 900.25 seconds\n",
-      "Elapsed simulation time: 950.25 seconds\n",
-      "Elapsed simulation time: 1000.25 seconds\n",
-      "Elapsed simulation time: 1050.25 seconds\n",
-      "Elapsed simulation time: 1100.25 seconds\n",
-      "Elapsed simulation time: 1150.25 seconds\n",
-      "Elapsed simulation time: 1200.25 seconds\n",
-      "Elapsed simulation time: 1250.25 seconds\n",
-      "Elapsed simulation time: 1300.25 seconds\n",
-      "Elapsed simulation time: 1350.25 seconds\n",
-      "Elapsed simulation time: 1400.25 seconds\n",
-      "Elapsed simulation time: 1450.25 seconds\n"
+      "Elapsed simulation time: 10.0 seconds\n",
+      "Elapsed simulation time: 20.0 seconds\n",
+      "Elapsed simulation time: 30.0 seconds\n",
+      "Elapsed simulation time: 40.0 seconds\n",
+      "Elapsed simulation time: 50.0 seconds\n",
+      "Elapsed simulation time: 60.0 seconds\n",
+      "Elapsed simulation time: 70.0 seconds\n",
+      "Elapsed simulation time: 80.0 seconds\n",
+      "Elapsed simulation time: 90.0 seconds\n",
+      "Elapsed simulation time: 100.0 seconds\n",
+      "Elapsed simulation time: 110.0 seconds\n",
+      "Elapsed simulation time: 120.0 seconds\n",
+      "Elapsed simulation time: 130.0 seconds\n",
+      "Elapsed simulation time: 140.0 seconds\n",
+      "Elapsed simulation time: 150.0 seconds\n",
+      "Elapsed simulation time: 160.0 seconds\n",
+      "Elapsed simulation time: 170.0 seconds\n",
+      "Elapsed simulation time: 180.0 seconds\n",
+      "Elapsed simulation time: 190.0 seconds\n",
+      "Elapsed simulation time: 200.0 seconds\n",
+      "Elapsed simulation time: 210.0 seconds\n",
+      "Elapsed simulation time: 220.0 seconds\n",
+      "Elapsed simulation time: 230.0 seconds\n",
+      "Elapsed simulation time: 240.0 seconds\n",
+      "Elapsed simulation time: 250.0 seconds\n",
+      "Elapsed simulation time: 260.0 seconds\n",
+      "Elapsed simulation time: 270.0 seconds\n",
+      "Elapsed simulation time: 280.0 seconds\n",
+      "Elapsed simulation time: 290.0 seconds\n",
+      "Elapsed simulation time: 300.0 seconds\n",
+      "Elapsed simulation time: 310.0 seconds\n",
+      "Elapsed simulation time: 320.0 seconds\n",
+      "Elapsed simulation time: 330.0 seconds\n",
+      "Elapsed simulation time: 340.0 seconds\n",
+      "Elapsed simulation time: 350.0 seconds\n",
+      "Elapsed simulation time: 360.0 seconds\n",
+      "Elapsed simulation time: 370.0 seconds\n",
+      "Elapsed simulation time: 380.0 seconds\n",
+      "Elapsed simulation time: 390.0 seconds\n",
+      "Elapsed simulation time: 400.0 seconds\n",
+      "Elapsed simulation time: 410.0 seconds\n",
+      "Elapsed simulation time: 420.0 seconds\n",
+      "Elapsed simulation time: 430.0 seconds\n",
+      "Elapsed simulation time: 440.0 seconds\n",
+      "Elapsed simulation time: 450.0 seconds\n",
+      "Elapsed simulation time: 460.0 seconds\n",
+      "Elapsed simulation time: 470.0 seconds\n",
+      "Elapsed simulation time: 480.0 seconds\n",
+      "Elapsed simulation time: 490.0 seconds\n",
+      "Elapsed simulation time: 500.0 seconds\n",
+      "Elapsed simulation time: 510.0 seconds\n",
+      "Elapsed simulation time: 520.0 seconds\n",
+      "Elapsed simulation time: 530.0 seconds\n",
+      "Elapsed simulation time: 540.0 seconds\n",
+      "Elapsed simulation time: 550.0 seconds\n",
+      "Elapsed simulation time: 560.0 seconds\n",
+      "Elapsed simulation time: 570.0 seconds\n",
+      "Elapsed simulation time: 580.0 seconds\n",
+      "Elapsed simulation time: 590.0 seconds\n",
+      "Elapsed simulation time: 600.0 seconds\n",
+      "Elapsed simulation time: 610.0 seconds\n",
+      "Elapsed simulation time: 620.0 seconds\n",
+      "Elapsed simulation time: 630.0 seconds\n",
+      "Elapsed simulation time: 640.0 seconds\n",
+      "Elapsed simulation time: 650.0 seconds\n",
+      "Elapsed simulation time: 660.0 seconds\n",
+      "Elapsed simulation time: 670.0 seconds\n",
+      "Elapsed simulation time: 680.0 seconds\n",
+      "Elapsed simulation time: 690.0 seconds\n",
+      "Elapsed simulation time: 700.0 seconds\n",
+      "Elapsed simulation time: 710.0 seconds\n",
+      "Elapsed simulation time: 720.0 seconds\n",
+      "Elapsed simulation time: 730.0 seconds\n",
+      "Elapsed simulation time: 740.0 seconds\n",
+      "Elapsed simulation time: 750.0 seconds\n",
+      "Elapsed simulation time: 760.0 seconds\n",
+      "Elapsed simulation time: 770.0 seconds\n",
+      "Elapsed simulation time: 780.0 seconds\n",
+      "Elapsed simulation time: 790.0 seconds\n",
+      "Elapsed simulation time: 800.0 seconds\n",
+      "Elapsed simulation time: 810.0 seconds\n",
+      "Elapsed simulation time: 820.0 seconds\n",
+      "Elapsed simulation time: 830.0 seconds\n",
+      "Elapsed simulation time: 840.0 seconds\n",
+      "Elapsed simulation time: 850.0 seconds\n",
+      "Elapsed simulation time: 860.0 seconds\n",
+      "Elapsed simulation time: 870.0 seconds\n",
+      "Elapsed simulation time: 880.0 seconds\n",
+      "Elapsed simulation time: 890.0 seconds\n",
+      "Elapsed simulation time: 900.0 seconds\n",
+      "Elapsed simulation time: 910.0 seconds\n",
+      "Elapsed simulation time: 920.0 seconds\n",
+      "Elapsed simulation time: 930.0 seconds\n",
+      "Elapsed simulation time: 940.0 seconds\n",
+      "Elapsed simulation time: 950.0 seconds\n",
+      "Elapsed simulation time: 960.0 seconds\n",
+      "Elapsed simulation time: 970.0 seconds\n",
+      "Elapsed simulation time: 980.0 seconds\n",
+      "Elapsed simulation time: 990.0 seconds\n",
+      "Elapsed simulation time: 1000.0 seconds\n",
+      "Elapsed simulation time: 1010.0 seconds\n",
+      "Elapsed simulation time: 1020.0 seconds\n",
+      "Elapsed simulation time: 1030.0 seconds\n",
+      "Elapsed simulation time: 1040.0 seconds\n",
+      "Elapsed simulation time: 1050.0 seconds\n",
+      "Elapsed simulation time: 1060.0 seconds\n",
+      "Elapsed simulation time: 1070.0 seconds\n",
+      "Elapsed simulation time: 1080.0 seconds\n",
+      "Elapsed simulation time: 1090.0 seconds\n",
+      "Elapsed simulation time: 1100.0 seconds\n",
+      "Elapsed simulation time: 1110.0 seconds\n",
+      "Elapsed simulation time: 1120.0 seconds\n",
+      "Elapsed simulation time: 1130.0 seconds\n",
+      "Elapsed simulation time: 1140.0 seconds\n",
+      "Elapsed simulation time: 1150.0 seconds\n",
+      "Elapsed simulation time: 1160.0 seconds\n",
+      "Elapsed simulation time: 1170.0 seconds\n",
+      "Elapsed simulation time: 1180.0 seconds\n",
+      "Elapsed simulation time: 1190.0 seconds\n",
+      "Elapsed simulation time: 1200.0 seconds\n",
+      "Elapsed simulation time: 1210.0 seconds\n",
+      "Elapsed simulation time: 1220.0 seconds\n",
+      "Elapsed simulation time: 1230.0 seconds\n",
+      "Elapsed simulation time: 1240.0 seconds\n",
+      "Elapsed simulation time: 1250.0 seconds\n",
+      "Elapsed simulation time: 1260.0 seconds\n",
+      "Elapsed simulation time: 1270.0 seconds\n",
+      "Elapsed simulation time: 1280.0 seconds\n",
+      "Elapsed simulation time: 1290.0 seconds\n",
+      "Elapsed simulation time: 1300.0 seconds\n",
+      "Elapsed simulation time: 1310.0 seconds\n",
+      "Elapsed simulation time: 1320.0 seconds\n",
+      "Elapsed simulation time: 1330.0 seconds\n",
+      "Elapsed simulation time: 1340.0 seconds\n",
+      "Elapsed simulation time: 1350.0 seconds\n",
+      "Elapsed simulation time: 1360.0 seconds\n",
+      "Elapsed simulation time: 1370.0 seconds\n",
+      "Elapsed simulation time: 1380.0 seconds\n",
+      "Elapsed simulation time: 1390.0 seconds\n",
+      "Elapsed simulation time: 1400.0 seconds\n",
+      "Elapsed simulation time: 1410.0 seconds\n",
+      "Elapsed simulation time: 1420.0 seconds\n",
+      "Elapsed simulation time: 1430.0 seconds\n",
+      "Elapsed simulation time: 1440.0 seconds\n",
+      "Elapsed simulation time: 1450.0 seconds\n",
+      "Elapsed simulation time: 1460.0 seconds\n"
      ]
     }
    ],
@@ -131,9 +254,10 @@
     "# Move the particles\n",
     "for i in range(n_times):\n",
     "    particles.move(times[i], dt)\n",
-    "    particles.write_hdf5(parts_h5, i+1, 0, nparticles, times[i], 0)\n",
-    "    \n",
-    "    if np.mod(i, 200)==0:\n",
+    "    tidx = np.searchsorted(print_times, times[i])\n",
+    "    if print_times[tidx] == times[i]:\n",
+    "        # Write to file at specified times\n",
+    "        particles.write_hdf5(parts_h5, np.int32(i / print_inc) + 1, 0, nparticles, times[i], 0)\n",
     "        print(f\"Elapsed simulation time: {times[i]} seconds\")\n",
     "\n",
     "parts_h5.close()  # always close the HDF5 file!"
@@ -141,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +279,7 @@
        "<IPython.core.display.Video object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +309,7 @@
     "\n",
     "fname = output_directory + \"//particles.h5\"\n",
     "mvname = output_directory + \"//test.mp4\"\n",
-    "ani_kwargs = {\"frames\": np.arange(0, n_times, 20), \"interval\": 100}\n",
+    "ani_kwargs = {\"interval\": 100}\n",
     "\n",
     "vtkcoords = river.vtksgrid2d.GetPoints().GetData()\n",
     "coords = numpy_support.vtk_to_numpy(vtkcoords)\n",
@@ -199,11 +323,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "05a65cfb1c5e1f9bd44051d99674afdf77b3f655b248bf8c72425b866efbcf71"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('fluvial-fork')",
+   "display_name": "Python 3.9.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -217,9 +338,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "247358c2c18f9ad580f75b9f712b4e6090f4d97317c5ba37559c37c5510843fb"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
