fixed 3d test input file

--- a/notebooks/FM_GridFill.ipynb
+++ b/notebooks/FM_GridFill.ipynb
@@ -11,21 +11,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "c1eba5ff-9fc8-496b-8442-48f927b9dafd",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/rmcd/git/fluvparticle-fork/notebooks\n"
+     ]
+    }
+   ],
    "source": [
     "import vtk\n",
     "from vtk.util import numpy_support\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import os\n",
+    "print(os.getcwd())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "75a48354-e9d4-455f-a7f6-339f7237dec9",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# # filenames of existing 2d and 3d solutions\n",
@@ -42,19 +56,28 @@
     "# # filename of new 3d solution\n",
     "# new3dsol = '../data/simple_meander/Result_FM_MEander_1_long_3D1_new.vtk'\n",
     "\n",
+    "# # filenames of existing 2d and 3d solutions\n",
+    "# filename2d = '../data/IPC//NoStrmLnCurv_185cms2d1.vtk'\n",
+    "# filename3d = '../data/IPC/NoStrmLnCurv_185cms3d1.vtk'\n",
+    "\n",
+    "# # filename of new 3d solution\n",
+    "# new3dsol = '../data/IPC/NoStrmLnCurv_185cms3d1_new.vtk'\n",
+    "\n",
     "# filenames of existing 2d and 3d solutions\n",
-    "filename2d = '../data/IPC//NoStrmLnCurv_185cms2d1.vtk'\n",
-    "filename3d = '../data/IPC/NoStrmLnCurv_185cms3d1.vtk'\n",
+    "filename2d = '../tests/data/Result_straight_2d_1.vtk'\n",
+    "filename3d = '../tests/data/Result_straight_3d_1.vtk'\n",
     "\n",
     "# filename of new 3d solution\n",
-    "new3dsol = '../data/IPC/NoStrmLnCurv_185cms3d1_new.vtk'"
+    "new3dsol = '../tests/data/Result_straight_3d_1_new.vtk'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "b08a71d4-f9c1-4b0a-be88-f3f9920638f8",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Read existing solutions\n",
@@ -75,15 +98,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "c0e093bd-2e0c-46c1-b333-edbb70be6471",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5356, 101, 1) (5356, 101, 15)\n"
+      "(401, 21, 1) (401, 21, 11)\n"
      ]
     }
    ],
@@ -96,9 +121,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "e56e58de-99d0-4b1a-ac1d-04dd4cc87cc8",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -116,9 +143,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "875f7430-8382-4894-b986-de8739e13df9",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# get the original velocity distribution\n",
@@ -128,18 +157,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "7ba21ebb-5083-4987-9100-287591cebcb9",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Velocity\n",
       "SVelocity\n",
       "NVelocity\n",
       "IBC\n",
+      "Velocity\n",
       "Velocity (magnitude)\n"
      ]
     }
@@ -152,17 +183,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "a3221a08-879c-4706-b9bf-69df2208d22e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8114340"
+       "92631"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,9 +206,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "a93d2b6a-d91a-4570-8522-46f0b8d1552e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -183,7 +218,7 @@
        "1"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "778a6b7b-aa2e-44dd-ac96-984e703af35f",
    "metadata": {
     "tags": []
@@ -221,7 +256,7 @@
        "1"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
